add_library(ncl 
#nxsassumptionsblock.cpp
nxsblock.h nxsblock.cpp
#nxscharactersblock.cpp
#nxsdatablock.cpp
#nxsdiscretedatum.cpp
#nxsdiscretematrix.cpp
#nxsdistancedatum.cpp
#nxsdistancesblock.cpp
#nxsemptyblock.cpp
nxsexception.h nxsexception.cpp
nxsdefs.h
nxsreader.h nxsreader.cpp
#nxssetreader.cpp
nxsindent.h
nxsstring.h nxsstring.cpp
#nxstaxablock.cpp
nxstoken.h nxstoken.cpp
#nxstreesblock.cpp
ncl.h
)
